[package]
name = "lidar_200"
version = "0.1.0"
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.11.1"
plotters = "^0.3.0"
rand = "0.8.2"
statrs = "0.13.0"
