[package]
name = "lnpr"
version = "0.1.0"
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.0"
plotters-backend = "0.3.0"
rand = "0.8.3"
rand_distr = "0.4.0"
ndarray = "0.13.0"
ndarray-linalg = { version = "0.12.0", features = ["intel-mkl"] }
ndarray-rand = "0.11.0"
num-traits = "0.2.14"
