[package]
name = "mcl7_multirobot"
version = "0.1.0"
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.0"
lnpr = { path = "../../lnpr" }
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
